# pagr

./: .gitignore  AUTHORS  Changelog.md  Makefile.am  README.md  configure.ac  guix.scm  localtest.sh  pagr.org
doc/: pagr.html  pagr.info  pagr.man  pagr.tex  pagr.texi  pagr.txt
src/: exe.scm  main.scm
test/: maintests.scm
